--- a/src/app/features/indent/single-indent-details/single-indent-details.component.html
+++ b/src/app/features/indent/single-indent-details/single-indent-details.component.html
@@ -2,7 +2,8 @@
   <div class="row" class="dashboard-unique p-b-20 min-height parent">
     <div class="row">
       <div class="col-sm-12 p-l-10 p-r-10">
-        <card-layout *ngIf="product" (onEdit)="editProject()" (onDelete)="deleteProject()" [projectDetails]="product"></card-layout>
+        <card-layout *ngIf="product" (onEdit)="editProject()" (onDelete)="deleteProject()" [projectDetails]="product">
+        </card-layout>
       </div>
     </div>
 
@@ -27,7 +28,8 @@
         <!-- REquested Quantity Column -->
         <ng-container matColumnDef="Requested Quantity">
           <th mat-header-cell *matHeaderCellDef class="p-l-20">Requested Quantity</th>
-          <td mat-cell *matCellDef="let element" class="p-l-20">{{ element.requestedQuantity }} {{ element.materialUnit }}</td>
+          <td mat-cell *matCellDef="let element" class="p-l-20">{{ element.requestedQuantity }}
+            {{ element.materialUnit }}</td>
         </ng-container>
 
         <!-- Issued Quantity Column -->
@@ -36,9 +38,10 @@
           <td mat-cell *matCellDef="let element" class="p-l-20">{{ element.issuedQty }} {{ element.materialUnit }}</td>
         </ng-container>
 
-        <!-- Requested Date3 Column -->
+        <!-- Required Date3 Column -->
         <ng-container matColumnDef="Requested Date">
-          <th mat-header-cell *matHeaderCellDef>Requested Date</th>
+          <!-- <th mat-header-cell *matHeaderCellDef>Requested Date</th> -->
+          <th mat-header-cell *matHeaderCellDef>Required Date</th>
           <td mat-cell *matCellDef="let element">
             {{ element.dueDate | date: "dd-MMM-yyy" }}
           </td>
