--- a/src/app/shared/components/subscriptions/subscriptions.component.html
+++ b/src/app/shared/components/subscriptions/subscriptions.component.html
@@ -71,8 +71,7 @@
                         Add More User
                       </button> -->
 
-                      <ng-container
-                        *ngIf="(plan.activeSubscription === null && isActiveSubscription === 1); else blnkSpc">
+                      <ng-container *ngIf="(isFreeTrialSubscription === 1 && isActiveSubscription === 1); else blnkSpc">
                         <button mat-button mat-button-base class="sbtn main-background-color color-white demo-title"
                           (click)="choosePlan('0', plan.planId, plan.offerId, plan.planPricingId, plan.planEncryptId, plan.planPricingEncryptId)">
                           Buy Now
@@ -120,7 +119,7 @@
                 <!-- <ng-container
                   *ngIf="plan.activeSubscription !== null && plan.planName !== 'Custom' && plan.isTrialActive === 0"> -->
                 <ng-container
-                  *ngIf="plan.activeSubscription !== null && plan.planName !== 'Custom' && plan.isTrialActive === 0 && isActiveSubscription === 1">
+                  *ngIf="plan.activeSubscription !== null && plan.planName !== 'Custom' && isActiveSubscription === 1 && isFreeTrialSubscription === 0">
                   <p class="text-center mt-4 mr-4 brand-color">
                     <button mat-button (click)="unsubscribePlan(plan.planId)">
                       Cancel Plan
