po - image integration issue, jira issues for BOM, receipt

--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -9,7 +9,7 @@
     <div class="row p-t-10 p-b-10">
       <div class="col-sm-12 p-r-10">
         <button (click)="showIndent()" mat-raised-button [disabled]="!materialForms.valid" class="main-background-color main-button color-white pull-right">
-          Raise Indent
+          Raise PR
         </button>
       </div>
     </div>
