--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -587,6 +587,9 @@ mat-icon {
   display: flex;
   justify-content: center;
   align-items: center;
+  div:first-child{
+    margin-right: 25px;
+  }
 }
 
 .project-name-div {
