--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -656,16 +656,16 @@ input::title {
 
 .fltr-btn {
   font-size: 30px !important;
-    min-width: auto !important;
-    line-height: 18px !important;
-    padding: 0 10px !important;
-    margin-top: -8px !important;
+  min-width: auto !important;
+  line-height: 18px !important;
+  padding: 0 10px !important;
+  margin-top: -8px !important;
 }
 
-.dark-blu-color-bg{
-background-color: #0c3c55;
+.dark-blu-color-bg {
+  background-color: #0c3c55;
 }
-.dark-blu-color{
+.dark-blu-color {
   color: #0c3c55;
 }
 
@@ -687,42 +687,68 @@ background-color: #0c3c55;
 .justify-content-space-between {
   justify-content: space-between;
 }
+.center-element {
+  position: absolute;
+  float: left;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
-.mb-srch{
+.pull-right {
+  float: right;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-webkit-center {
+  text-align: -webkit-center;
+}
+
+.pull-left {
+  float: left;
+}
+.mb-srch {
   position: fixed;
   top: 0;
-  right:0;
+  right: 0;
   z-index: 99;
   width: 100vw;
-  height:100vh;
-  transition: .2s;
-  background-color: rgba(0,0,0,0.2);
+  height: 100vh;
+  transition: 0.2s;
+  background-color: rgba(0, 0, 0, 0.2);
 
-  .sdb{
+  .sdb {
     top: 0;
-    left:0;
+    left: 0;
     width: 20vw;
     height: 100vh;
     position: fixed;
   }
 
-  .mb-cl{
+  .mb-cl {
     position: fixed;
     top: 0;
-    right:0;
-    height:100vh;
+    right: 0;
+    height: 100vh;
     background-color: #fff;
-    right:0;
-    width:80vw;
+    right: 0;
+    width: 80vw;
     padding: 0;
     overflow-y: auto;
   }
 
-  &__open{
-    transform: translateX(0);    
+  &__open {
+    transform: translateX(0);
   }
 
-  &__close{
+  &__close {
     transform: translateX(100%);
   }
 }
