--- a/src/assets/scss/pages/dashboard.scss
+++ b/src/assets/scss/pages/dashboard.scss
@@ -163,7 +163,6 @@ body,
     // box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15);
     border: 1px solid #bdbdbd;
     padding: 10px 15px;
-    width: 43%;
   }
 }
 
@@ -332,7 +331,7 @@ body,
 
 @media only screen and (max-width: 958px) {
   .app-dashboard {
-   // margin-top: 56px;
+    // margin-top: 56px;
     margin-top: 78px;
     margin-bottom: 4px;
   }
@@ -439,16 +438,17 @@ body,
       }
     }
   }
-  .sml-db{
+  .sml-db {
     flex-wrap: wrap;
     justify-content: flex-start !important;
     margin-left: 6px;
-    .things-to-do, .things-to-do__icons{
+    .things-to-do,
+    .things-to-do__icons {
       margin-right: 0px;
       margin-bottom: 10px;
     }
   }
-  .things-to-do.sml-d1{
+  .things-to-do.sml-d1 {
     padding: 10px !important;
     align-items: center;
     overflow: hidden;
@@ -456,10 +456,16 @@ body,
   .things-to-do__icons h6 {
     font-size: 11px;
   }
-
 }
 @media only screen and (max-width: 560px) {
-  .users-dashboard, .bom-table-style, .dashboard-unique, .grn-dashboard, .project-dashboard, .create-po-dashboard, .bom-main-style, .copy-bom-materials-outer {
+  .users-dashboard,
+  .bom-table-style,
+  .dashboard-unique,
+  .grn-dashboard,
+  .project-dashboard,
+  .create-po-dashboard,
+  .bom-main-style,
+  .copy-bom-materials-outer {
     padding-left: 7px !important;
     padding-right: 7px !important;
   }
@@ -527,8 +533,8 @@ body,
   // }
 }
 
-@media only screen and (max-width: 1023px){
-  .off-white-background{
+@media only screen and (max-width: 1023px) {
+  .off-white-background {
     height: 10vh !important;
   }
 
@@ -537,7 +543,8 @@ body,
     line-height: 10vh !important;
   }
 
-  .email-verification, .terms-conditions {
+  .email-verification,
+  .terms-conditions {
     padding: 10px 0 50px !important;
   }
 
@@ -551,13 +558,13 @@ body,
   }
 }
 
-@media only screen and (max-width: 767px){
+@media only screen and (max-width: 767px) {
   .email-verification .width-60 {
     width: 100% !important;
   }
 
   .verify-email {
-    width: 75vw!important;
+    width: 75vw !important;
     margin: auto;
   }
 
@@ -567,7 +574,7 @@ body,
   }
 }
 
-@media only screen and (max-width: 460px){
+@media only screen and (max-width: 460px) {
   .verify-email {
     width: 90vw !important;
   }
@@ -578,7 +585,7 @@ body,
   }
 }
 
-@media only screen and (max-width: 445px){
+@media only screen and (max-width: 445px) {
   .email-verification .width-60 {
     width: 100% !important;
     padding: 20px 10px !important;
@@ -622,21 +629,19 @@ body,
   border-radius: 5px;
 }
 
-
-.wdrpr-mb{
-  .ngx-mat-drp-date-input{
+.wdrpr-mb {
+  .ngx-mat-drp-date-input {
     min-width: 90% !important;
     width: 90% !important;
   }
-  .ngx-mat-drp-date-display{
+  .ngx-mat-drp-date-display {
     min-width: 50% !important;
     max-width: 100% !important;
     padding-left: 15px;
   }
 }
 
-
-@media(max-width:340px){
+@media (max-width: 340px) {
   .things-to-do__icons {
     min-width: 76px !important;
   }
