jira bugs and signup, singin, forgot password responsiveness

--- a/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
+++ b/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
@@ -1,12 +1,12 @@
 <div class="sign-in-up">
   <div class="row m-0">
-    <div class="d-none d-sm-block col-md-12 col-lg-8 pl-0">
+    <div class="d-none d-sm-block col-lg-8 col-md-7 col-sm-6 col-xs-12 pl-0 landing-page-image">
       <div class="min-height">
         <img *ngIf="tabClicked == 'Sign Up'" src="../../../assets/images/image-signup.jpg" alt="construction-site-image" class="signup-image" style="width: 100%;" />
         <img *ngIf="tabClicked == 'Sign In'" src="../../../assets/images/image-login.jpg" alt="construction-site-image" class="login-image" style="width: 100%;" />
       </div>
     </div>
-    <div class="col-xs-12 col-md-6 col-lg-4 offset-lg-0 parent">
+    <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12 offset-lg-0 parent right-align-form">
       <div class="form-design justify-content-center">
         <!-- buildsupply logo -->
         <img src="../../../assets/images/loginLogo.png" alt="BuildSupply" class="logo-img mb-4 mt-4" />
