--- a/src/app/features/auth/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/forgot-password/forgot-password.component.html
@@ -1,11 +1,11 @@
-<div>
+<div class="forgot-password-page">
   <div class="row m-0">
-    <div class="d-none d-sm-block col-md-12 col-lg-8 pl-0">
+    <div class="d-none d-sm-block col-lg-8 col-md-7 col-sm-6 col-xs-12 pl-0 landing-page-image">
       <div class="min-height">
         <img src="../../../assets/images/image-login.jpg" alt="construction-site-image" class="login-image" style="width: 100%;" />
       </div>
     </div>
-    <div class="col-xs-12 col-md-6 col-lg-4 offset-lg-0 parent">
+    <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12 offset-lg-0 parent right-align-form">
       <div class="form-design-forget justify-content-center">
         <!-- buildsupply logo -->
         <img src="../../../assets/images/loginLogo.png" alt="BuildSupply" class="logo-img mb-4 mt-4" />
@@ -40,7 +40,7 @@
           <ng-container *ngIf="phonescreenShow">
             <div class="row" *ngIf="phonescreenShow">
               <div *ngIf="this.callingCode === '+91'" class="col-xs-4">
-                <mat-form-field class="border-select width100Percent p-t-5 mat-form-field-arrow-padding mat-form-field-infix-padding mat-form-field-flex-mm-padding">
+                <mat-form-field class="border-select width100Percent p-t-5 mat-form-field-arrow-padding mat-form-field-infix-padding mat-form-field-flex-mm-padding left-country-code">
                   <mat-select formControlName="countryCode">
                     <div class="display-flex">
                       <input
@@ -58,9 +58,9 @@
                     </div>
                     <mat-select-trigger>
                       <span matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"
-                        ><img class="width35Percent p-r-10" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
-                        <span class="p-r-5 font-size12">{{ selectedCountry && selectedCountry.countryCode }}</span>
-                        <span class="font-size12 text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span>
+                        ><img class="width35Percent p-r-10 country-flags" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+                        <span class="p-r-5 font-size12 country-symbol">{{ selectedCountry && selectedCountry.countryCode }}</span>
+                        <span class="font-size12 text-semi-bold country-extension">{{ selectedCountry && selectedCountry.callingCode }}</span>
                       </span>
                     </mat-select-trigger>
                     <mat-option
@@ -76,8 +76,9 @@
                   </mat-select>
                 </mat-form-field>
               </div>
+
               <div *ngIf="this.callingCode === '+91'" class="col-xs-8">
-                <mat-form-field class="border-input display-flex">
+                <mat-form-field class="border-input display-flex country-phone-num">
                   <input
                     matInput
                     type="number"
