--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -107,8 +107,8 @@
                                 </mat-select>
                               </mat-form-field>
                             </div>
-                            <div class="p-r-0 customDatePicker width-35 p-t-1" [ngClass]="isMobile ? 'pl-0 wdrpr-mb' : 'widthWrapper'">
-                              <ngx-mat-drp class="border-input" (selectedDateRangeChanged)="updateRange($event)" [options]="options" #dateRangePicker></ngx-mat-drp>
+                            <div class="p-r-0 customDatePicker width-35 p-t-7" [ngClass]="isMobile ? 'pl-0 wdrpr-mb' : 'widthWrapper'">
+                              <ngx-mat-drp class="border-input input-font-size" (selectedDateRangeChanged)="updateRange($event)" [options]="options" #dateRangePicker></ngx-mat-drp>
                             </div>
                             <div class="width-35 p-r-0 p-l-10">
                               <mat-form-field class="border-select select-project width-94 mat-form-field-flex-mm-padding">
@@ -184,8 +184,8 @@
                               </mat-form-field>
                             </div>
 
-                            <div class="p-r-0 customDatePicker width-35 p-t-1" [ngClass]="isMobile ? 'pl-0 wdrpr-mb' : 'widthWrapper'">
-                              <ngx-mat-drp class="border-input" (selectedDateRangeChanged)="updateRange($event)" [options]="options" #dateRangePicker></ngx-mat-drp>
+                            <div class="p-r-0 customDatePicker width-35 p-t-7" [ngClass]="isMobile ? 'pl-0 wdrpr-mb' : 'widthWrapper'">
+                              <ngx-mat-drp class="border-input input-font-size" (selectedDateRangeChanged)="updateRange($event)" [options]="options" #dateRangePicker></ngx-mat-drp>
                             </div>
                             <div class="width-35 p-r-0 p-l-10">
                               <mat-form-field class="border-select select-project width-94 mat-form-field-flex-mm-padding">
