--- a/src/app/features/users/user-details/user-details.component.html
+++ b/src/app/features/users/user-details/user-details.component.html
@@ -1,6 +1,5 @@
 <div class="page-start-point changeWidth pt-4">
-  <ng-container
-    *ngIf="(dataSourceActivateTemp == null || dataSourceActivateTemp.length == 0) && (dataSourceDeactivateTemp == null || dataSourceDeactivateTemp.length == 0)">
+  <ng-container *ngIf="(dataSourceActivateTemp == null || dataSourceActivateTemp.length == 0) && (dataSourceDeactivateTemp == null || dataSourceDeactivateTemp.length == 0)">
     <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
       <div class="add-user-img">
         <img src="../../../../assets/images/user-background.png" alt="BuildSupply_Logo" />
@@ -28,12 +27,11 @@
             </button>
           </mat-form-field>
         </div>
-        <div class="text-right col-xs-5 p-t-10 add-project-btn" [ngClass]="isMobile ? 'sm-btn1' : '' ">
+        <div class="text-right col-xs-5 p-t-10 add-project-btn" [ngClass]="isMobile ? 'sm-btn1' : ''">
           <!-- <button mat-raised-button class="main-background-color main-button color-white demo-title" (click)="addProject()">
           + Add Project
         </button> -->
-          <button mat-raised-button (click)="addUser()"
-            class="main-background-color main-button color-white demo-title">
+          <button mat-raised-button (click)="addUser()" class="main-background-color main-button color-white demo-title">
             Add User
           </button>
         </div>
@@ -42,7 +40,7 @@
       <ng-container *ngIf="dataSourceActivateTemp.length > 0" class="user-dts">
         <mat-expansion-panel class="myPanel" [expanded]="true">
           <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'">
-            <div class="row ">
+            <div class="row">
               <div class="col-sm-12">
                 <span>Active Users</span>
               </div>
@@ -57,8 +55,7 @@
 
               <ng-container matColumnDef="User Name">
                 <th mat-header-cell *matHeaderCellDef>User Name</th>
-                <td mat-cell *matCellDef="let element">{{ element.ProjectUser.firstName }}
-                  {{ element.ProjectUser.lastName }}</td>
+                <td mat-cell *matCellDef="let element">{{ element.ProjectUser.firstName }} {{ element.ProjectUser.lastName }}</td>
               </ng-container>
 
               <!-- Name Column -->
@@ -93,8 +90,7 @@
                 <th mat-header-cell *matHeaderCellDef class="project-user-details-width">Project</th>
                 <td mat-cell *matCellDef="let element" class="project-user-details-width">
                   <div class="project-name-div">
-
-                    <ng-container *ngFor="let x of element.ProjectList; let i=index;">
+                    <ng-container *ngFor="let x of element.ProjectList; let i = index">
                       <button mat-button class="btn-project-user-details" *ngIf="i < 2">
                         <div>
                           {{ x.projectName }}
@@ -102,9 +98,7 @@
                       </button>
                     </ng-container>
 
-
-                    <div class="show-rfq-names rfq-icon-material-i"
-                      *ngIf="element.ProjectList && (element.ProjectList.length > 2)">
+                    <div class="show-rfq-names rfq-icon-material-i" *ngIf="element.ProjectList && element.ProjectList.length > 2">
                       <!-- <img src="../../../../assets/images/i_icon.png" /> -->
                       <!-- <mat-icon class="material-info" [matMenuTriggerFor]="projectnames">info</mat-icon> -->
                       <span class="material-info color-main cursor-pointer" [matMenuTriggerFor]="projectnames">
@@ -115,20 +109,18 @@
                           <div id="project-names">
                             <h3>Project Names</h3>
                             <div class="body-of-notification">
-                              <ng-container *ngFor="let x of element.ProjectList; let i=index;">
+                              <ng-container *ngFor="let x of element.ProjectList; let i = index">
                                 <button mat-button class="btn-project-user-details">
                                   <div>
                                     {{ x.projectName }}
                                   </div>
                                 </button>
                               </ng-container>
-
                             </div>
                             <!-- <div class="seeAll"><a href="#">View All</a></div> -->
                           </div>
                         </div>
                       </mat-menu>
-
                     </div>
                   </div>
                 </td>
@@ -137,12 +129,11 @@
               <ng-container matColumnDef="star">
                 <th mat-header-cell *matHeaderCellDef class="edit-disable-user-details-width"></th>
                 <td mat-cell *matCellDef="let element" class="edit-disable-user-details-width">
-                  <mat-icon *ngIf="element.ProjectUser.isAccountOwner == 0" aria-hidden="false"
-                    (click)="deactivateUser(element)">
-                    <a class="width-22-px p-r-10 p-t-10 cursor-pointer"> <img
-                        src="../../../../assets/images/user-disable.png" /> </a></mat-icon>
-                  <mat-icon class="cursor-default" *ngIf="element.ProjectUser.isAccountOwner == 1" aria-hidden="false">
-                    <a class="width-22-px p-r-10 p-t-10"> </a></mat-icon>
+                  <mat-icon matTooltip="Deactivate User" *ngIf="element.ProjectUser.isAccountOwner == 0" aria-hidden="false" (click)="deactivateUser(element)">
+                    <a class="width-22-px p-r-10 p-t-10 cursor-pointer">
+                      <img [src]="element.ProjectUser.userId !== userId ? '../../../../assets/images/user-disable.png' : '../../../../assets/images/user-disable-01.png'" /> </a
+                  ></mat-icon>
+                  <mat-icon class="cursor-default" *ngIf="element.ProjectUser.isAccountOwner == 1" aria-hidden="false"> <a class="width-22-px p-r-10 p-t-10"> </a></mat-icon>
                   <i class="material-icons main-color" (click)="editProject(element)">
                     <a class="width-17-px p-r-20 cursor-pointer margin-top-minus3px">
                       <img src="../../../../assets/images/edit.png" />
@@ -178,8 +169,7 @@
               <!-- Position Column -->
               <ng-container matColumnDef="User Name">
                 <th mat-header-cell *matHeaderCellDef>User Name</th>
-                <td mat-cell *matCellDef="let element">{{ element.ProjectUser.firstName }}
-                  {{ element.ProjectUser.lastName }}</td>
+                <td mat-cell *matCellDef="let element">{{ element.ProjectUser.firstName }} {{ element.ProjectUser.lastName }}</td>
               </ng-container>
 
               <!-- Name Column -->
@@ -211,23 +201,18 @@
                 <th mat-header-cell *matHeaderCellDef class="project-user-details-width">Project</th>
                 <td mat-cell *matCellDef="let element" class="project-user-details-width">
                   <div class="project-name-div">
-
-                    <ng-container *ngFor="let x of element.ProjectList; let i=index;">
+                    <ng-container *ngFor="let x of element.ProjectList; let i = index">
                       <button mat-button class="btn-project-user-details" *ngIf="i < 2">
                         <div>
                           {{ x.projectName }}
                         </div>
-
                       </button>
                     </ng-container>
 
-
-                    <div class="show-rfq-names rfq-icon-material-i"
-                      *ngIf="element.ProjectList && (element.ProjectList.length > 2)">
+                    <div class="show-rfq-names rfq-icon-material-i" *ngIf="element.ProjectList && element.ProjectList.length > 2">
                       <!-- <img src="../../../../assets/images/i_icon.png" /> -->
                       <!-- <mat-icon class="material-info" [matMenuTriggerFor]="projectnames">info</mat-icon> -->
-                      <span class="material-info color-main cursor-pointer font-size12"
-                        [matMenuTriggerFor]="projectnames">
+                      <span class="material-info color-main cursor-pointer font-size12" [matMenuTriggerFor]="projectnames">
                         More
                       </span>
                       <mat-menu #projectnames="matMenu" class="header-project-menu">
@@ -235,20 +220,18 @@
                           <div id="project-names">
                             <h3>Project Names</h3>
                             <div class="body-of-notification">
-                              <ng-container *ngFor="let x of element.ProjectList; let i=index;">
+                              <ng-container *ngFor="let x of element.ProjectList; let i = index">
                                 <button mat-button class="btn-project-user-details">
                                   <div>
                                     {{ x.projectName }}
                                   </div>
                                 </button>
                               </ng-container>
-
                             </div>
                             <!-- <div class="seeAll"><a href="#">View All</a></div> -->
                           </div>
                         </div>
                       </mat-menu>
-
                     </div>
                   </div>
                 </td>
